--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.username = postgres
-spring.datasource.password = 1234
+spring.datasource.password = "replace with password do not commit password!"
 
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
