--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -33,6 +33,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<version>3.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -68,7 +69,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<version>3.5.0</version>
 		</dependency>
 	</dependencies>
 
